.svn/pristine/f1/f1b96870c79086c526b635dbccb39886e1b58e34.svn-base
Naloga2.c: In function 'ps':
Naloga2.c:787:14: error: void value not ignored as it ought to be
  int *perm = sort_found_pids(found_contents, size_contents);
              ^
